--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         }
 
         p {
-
             font-weight: 400;
             margin: 0 0 20px;
             line-height: 2;
@@ -57,11 +56,6 @@
     </style>
 </head>
 <body>
-<!--.container 类用于固定宽度并支持响应式布局的容器。-->
-<!--class="container-fluid //用于 100% 宽度，占据全部视口（viewport）的容器-->
-<p></p>
-
-<p></p>
 <div class="container">
 
     <div class="row">
@@ -70,10 +64,10 @@
                 <div class="icon mb40">
                     <img src="https://www.abc.edu.cn/dzxxgcx/images/1.svg" class="icon-svg-2x">
                 </div>
-                <h2><a href="/dzxxgcx/xxy/1302/23490.html" class="title" target="_blank">移动互联应用技术</a></h2>
+                <h2><a href="#"  class="title">移动互联应用技术</a></h2>
                 <p>移动互联应用技术为安徽省专业综合改革试点专业，同时移动互联应用技术专业被遴选为高等职业教育创新发展行动计划骨干专业建设项目。</p>
                 <div class="aaa">
-                    <a href="/dzxxgcx/xxy/1302/23490.html" class="btn-link" target="_blank">查看详情</a>
+                    <a href="#"  class="btn-link">查看详情</a>
                 </div>
             </div>
         </div>
@@ -82,10 +76,10 @@
         <div class="col-md-4 col-sm-5 col-xs-6 col-sm-offset-1 col-md-offset-0">
             <div class="bg-white pinside40 service-block outline mb30">
                 <div class="icon mb40"><img src="https://www.abc.edu.cn/dzxxgcx/images/2.svg" class="icon-svg-2x"></div>
-                <h2><a href="/dzxxgcx/xxy/1302/23491.html" class="title" target="_blank">数字媒体应用技术</a></h2>
+                <h2><a href="#"  class="title">数字媒体应用技术</a></h2>
                 <p>本专业是安徽省综合改革试点专业和省级卓越技能型人才培养重点建设专业。专业培养具备数字媒体应用技术专业知识，掌握数字媒体应用技术专业... </p>
                 <div class="aaa">
-                    <a href="/dzxxgcx/xxy/1302/23491.html" class="btn-link" target="_blank">查看详情</a></div>
+                    <a href="#" class="btn-link">查看详情</a></div>
             </div>
         </div>
 
@@ -93,17 +87,14 @@
         <div class="col-md-4 col-sm-6 col-xs-6 hidden-xs hidden-sm ">
             <div class="bg-white pinside40 service-block outline mb30">
                 <div class="icon mb40"><img src="https://www.abc.edu.cn/dzxxgcx/images/3.svg" class="icon-svg-2x"></div>
-                <h2><a href="/dzxxgcx/xxy/1302/23489.html" class="title" target="_blank">云计算技术与应用</a></h2>
+                <h2><a href="#"  class="title">云计算技术与应用</a></h2>
                 <p>本专业培养面向互联网和相关服务等行业，能够从事云计算运维、云计算开发、云计算方案设计等工作的高素质技术技能人才。</p>
                 <div class="aaa">
-                    <a href="/dzxxgcx/xxy/1302/23489.html" class="btn-link" target="_blank">查看详情</a></div>
+                    <a href="#"  class="btn-link">查看详情</a></div>
             </div>
         </div>
     </div>
 
 </div>
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
