--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="banner">
         <div class="container">
             <div class="header-text">
-                <h2>杨帆 YungFan</h2>
+                <h2>杨帆(YungFan)</h2>
                 <p class="small-text">
                     中国·芜湖<br/> 89年·理工男
                     <br/> 高校教师
@@ -36,6 +36,7 @@
                     <br/> 在线课程：https://ke.qq.com/cgi-bin/agency?aid=67223
                     <br/>
                 </p>
+                <br/>
                 <p class="small-text" style="text-align: left;">
                     在腾讯云、CocoaChina、简书、掘金、微信公众号等平台撰写 iOS、Swift、SwiftUI、Combine、Android 等相关技术博客近 200 篇。 在腾讯课堂开设了十几门在线课程，包含 Swift、Objective-C、iOS开发、SwiftUI 与 Combine 等。</p>
             </div>
