--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accent</title>
+    <title>YungFan</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="css/responsive.css" rel="stylesheet" media="screen" type="text/css">
 </head>
