--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo-menu">
                 <div class="logo">
-                    <h1><a href="#">个人介绍</a></h1>
+                    <h1><a href="#">YungFan 个人介绍</a></h1>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
     <div class="banner">
         <div class="container">
             <div class="header-text">
-                <h2>杨帆(YungFan)</h2>
+                <h2>杨帆</h2>
                 <p class="small-text">
                     中国·芜湖<br/> 89年·理工男
                     <br/> 高校教师
