--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <br/>
                 <p class="small-text" style="text-align: left;">
-                    在腾讯云、CocoaChina、简书、掘金、微信公众号等平台撰写 iOS、Swift、SwiftUI、Combine、Android 等相关技术博客近 200 篇。 在腾讯课堂开设了十几门在线课程，包含 Swift、Objective-C、iOS开发、SwiftUI 与 Combine 等。</p>
+                    在腾讯云、CocoaChina、简书、掘金、微信公众号等平台撰写 iOS、Swift、SwiftUI、Combine、Android 等相关技术博客近 200 篇。 在腾讯课堂开设了十几门在线课程，包含 Swift、Objective-C、iOS开发、SwiftUI 与 Combine 等，学员近 5000 人。</p>
             </div>
         </div>
     </div>
@@ -47,8 +47,7 @@
         <div class="container">
             <h3 class="text-head">个人介绍</h3>
             <p class="box-desc">
-                以笔名 YungFan 在腾讯云、CocoaChina、简书、掘金、微信公众号等平台撰写 iOS、Swift、SwiftUI、Combine、Android 等相关技术博客近 200+ 篇，访问量近 50w。
-                在腾讯课堂开设了十几门在线课程，包含 Swift、Objective-C、iOS开发、SwiftUI 与 Combine 等，学员近 5000。</p>
+            </p>
         </div>
     </div>
     -->
