--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo-menu">
                 <div class="logo">
-                    <h1><a href="#">YungFan 个人介绍</a></h1>
+                    <h1><a href="#">YungFan 简介</a></h1>
                 </div>
             </div>
         </div>
