--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo-menu">
                 <div class="logo">
-                    <h1><a href="#">YungFan 介绍</a></h1>
+                    <h1><a href="#" style="text-align: center;">YungFan 介绍</a></h1>
                 </div>
             </div>
         </div>
@@ -24,6 +24,7 @@
         <div class="container">
             <div class="header-text">
                 <h2>杨帆</h2>
+                <br/>
                 <p class="small-text">
                     中国·芜湖<br/> 89年·理工男
                     <br/> 高校教师
@@ -38,7 +39,8 @@
                 </p>
                 <br/>
                 <p class="small-text" style="text-align: left;">
-                    在腾讯云、CocoaChina、简书、掘金、微信公众号等平台撰写 iOS、Swift、SwiftUI、Combine、Android 等相关技术博客近 200 篇。 在腾讯课堂开设了十几门在线课程，包含 Swift、Objective-C、iOS开发、SwiftUI 与 Combine 等，学员近 5000 人。</p>
+                    在腾讯云、CocoaChina、掘金、简书等平台撰写技术博客近两百篇，内容涵盖 Java、Android、Swift、iOS 等。<br/> 在腾讯课堂上线课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine 等。
+                </p>
             </div>
         </div>
     </div>
