--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YungFan</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="css/responsive.css" rel="stylesheet" media="screen" type="text/css">
+    <link rel="stylesheet" media="screen" type="text/css" href="css/responsive.css">
 </head>
 
 <body>
@@ -26,7 +26,8 @@
                 <h2>杨帆</h2>
                 <br/>
                 <p class="small-text">
-                    中国·芜湖<br/> 89年·理工男
+                    中国·芜湖
+                    <br/> 89年·理工男
                     <br/> 高校教师
                     <br/> 软件开发工程师
                     <br/> 腾讯课堂签约讲师
@@ -35,11 +36,8 @@
                     <br/> 微信公众号：YungFan
                     <br/> GitHub：https://github.com/yungfan
                     <br/> 在线课程：https://ke.qq.com/cgi-bin/agency?aid=67223
-                    <br/>
-                </p>
-                <br/>
-                <p class="small-text" style="text-align: left;">
-                    在腾讯云、CocoaChina、掘金、简书等平台撰写技术博客近两百篇，内容涵盖 Java、Android、Swift、iOS 等。<br/> 在腾讯课堂上线课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine 等。
+                    <br/> 在腾讯课堂上线课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine。
+                    <br/> 在腾讯云、CocoaChina、掘金、简书等平台撰写技术博客近两百篇，内容涵盖 Java、Android、Swift、iOS。
                 </p>
             </div>
         </div>
