--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <br/> 微信公众号：YungFan
                     <br/> GitHub：https://github.com/yungfan
                     <br/> 在线课程：https://ke.qq.com/cgi-bin/agency?aid=67223
-                    <br/> 在腾讯课堂上线课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine。
-                    <br/> 在腾讯云、CocoaChina、掘金、简书等平台撰写近两百篇，内容涵盖 Java、Android、Swift、iOS。
+                    <br/> 在腾讯课堂发布课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine。
+                    <br/> 在腾讯云、CocoaChina、掘金、简书等平台撰写博客两百余篇，内容涵盖 Java、Android、Swift、iOS。
                 </p>
             </div>
         </div>
