--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- <div class="header">
         <div class="container">
             <div class="logo-menu">
                 <div class="logo">
@@ -18,15 +18,15 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="banner">
         <div class="container">
             <div class="header-text">
-                <h2>杨帆</h2>
+                <h2>YungFan</h2>
                 <br/>
                 <p class="small-text">
                     中国·芜湖
-                    <br/> 89年·理工男
+                    <br/> 理工男
                     <br/> 高校教师
                     <br/> 软件开发工程师
                     <br/> 腾讯课堂签约讲师
@@ -35,8 +35,8 @@
                     <br/> GitHub：https://github.com/yungfan
                     <br/> 技术方向：iOS、Android、Java、Web前端
                     <br/> 在线课程：https://ke.qq.com/cgi-bin/agency?aid=67223
-                    <br/> 在腾讯课堂发布课程十几门，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine。
-                    <br/> 在腾讯云、CocoaChina、掘金、简书等平台撰写博客两百余篇，内容涵盖 Java、Android、Swift、iOS。
+                    <br/> 在腾讯课堂发布多门课程，内容包括 Swift、Objective-C、iOS、SwiftUI、Combine。
+                    <br/> 在掘金、简书、腾讯云、CocoaChina等平台撰写博客两百余篇，内容涵盖 Java、Android、Swift、iOS。
                 </p>
             </div>
         </div>
