--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
   <meta name="author" content="YungFan">
   <meta name="keywords" content="">
   
-    <meta property="og:type" content="website">
-<meta property="og:title" content="Hexo">
+    <meta name="description" content="Swift iOS SwiftUI Combine ARKit CoreML">
+<meta property="og:type" content="website">
+<meta property="og:title" content="YungFan Blog">
 <meta property="og:url" content="https://yungfan.github.io/index.html">
-<meta property="og:site_name" content="Hexo">
+<meta property="og:site_name" content="YungFan Blog">
+<meta property="og:description" content="Swift iOS SwiftUI Combine ARKit CoreML">
 <meta property="og:locale" content="zh_CN">
 <meta property="article:author" content="YungFan">
 <meta name="twitter:card" content="summary_large_image">
   
   
   
-  <title>Hexo</title>
+  <title>YungFan Blog</title>
 
   <link  rel="stylesheet" href="https://lib.baomitu.com/twitter-bootstrap/4.6.1/css/bootstrap.min.css" />
 
