--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="banner-text text-center fade-in-up">
         <div class="h2">
           
-            <span id="subtitle" data-typed-text="杨帆&lt;br/&gt;理工男&lt;br/&gt;中国·芜湖&lt;br/&gt;高校教师·开发者&lt;br/&gt;QQ：1592617849&lt;br/&gt;Email：yungfan@vip.163.com&lt;br/&gt;技术方向：移动开发·Web前端·Java后端"></span>
+            <span id="subtitle" data-typed-text="杨帆&lt;br/&gt;理工男&lt;br/&gt;中国·芜湖&lt;br/&gt;高校教师·开发者&lt;br/&gt;QQ：1592617849&lt;br/&gt;Email：yungfan@vip.163.com"></span>
           
         </div>
 
